Fully functional but with lots of repeated code

--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 
 <body>
     <div id="carousel">
-        <div id="prev-btn">Prev</div>
+        <div id="prev-btn"> &#60;</div>
         <div id="picture-frame">
         </div>
-        <div id="next-btn">Next</div>
+        <div id="next-btn">&#62;</div>
     </div>
+    <div id="selection-area">
+        <div id="selection-circles"></div>
+    </div>
+
     <div id="pictures">
         <div class="slide">
             <img src="images/iguana1.jpeg" alt="">
@@ -29,6 +33,9 @@
         </div>
         <div class="slide">
             <img src="images/iguana4.jpeg" alt="">
+        </div>
+        <div class="slide">
+            <img src="images/iguana5.webp" alt="">
         </div>
     </div>
 </body>
